--- a/emmet/Reto.html
+++ b/emmet/Reto.html
@@ -1,19 +1,236 @@
-<!-- Navigation -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Reto</title>
+</head>
+<link rel="stylesheet" type="text/css" href="css/emme_css.css">
+<body>
 
+<!-- Navigation -->
+<div class="div">
+	<h2>Navigation</h2>
+	<section>
+		<div class="ejemplo">			
 nav#mainNav.navbar.navbar-default.navbar-fixed-top.navbar-custon>(.container>(.navbar-header.page-scroll>(button[type=button].navbar-toggle[data-toggle=collapse][data-target=#bs-example-navbar-collapse-1]>span.sr-only{Toggle navigation}+{ Menu }>i.fa.fa-bars)+>a[href=page-top].navbar-brand{Start Bootstrap})>(.collapse.navbar-collapse#bs-example-navbar-collapse-1>ul.nav.navbar-nav.navbar-right>(li.hidden>a[href=#page-top])+>(li.page-scroll>a[href=#portafolio]{Portafolio})+>(li.page-scroll>a[href=#about]{About})+>(li.page-scroll>a[href=#contact]{Contact})))
+		</div>
+		<div class="result" id="test">
+			<xmp>				
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custon">
+	<div class="container">
+		<div class="navbar-header page-scroll"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"><span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i></button><a href="page-top" class="navbar-brand">Start Bootstrap</a></div>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="hidden"><a href="#page-top"></a></li>
+				<li class="page-scroll"><a href="#portafolio">Portafolio</a></li>
+				<li class="page-scroll"><a href="#about">About</a></li>
+				<li class="page-scroll"><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+			</xmp>
+		</div>
+	</section>
+</div>
 
 <!-- Header -->
-
-header>.container#maincontent[tabindex=-1]>.row>.col-lg-12>(img.img-responsive[src=img/profile.png][alt=])+>(div.intro-text>(h1.name{Start Bootstrap})+>(hr.star-light)+>(span.skills{Web Developer - Graphic Artist - User Experience Designer}))
+<div class="div">
+	<h2>Header</h2>
+	<section>
+		<div class="ejemplo">
+			header>.container#maincontent[tabindex=-1]>.row>.col-lg-12>(img.img-responsive[src=img/profile.png][alt=])+>(div.intro-text>(h1.name{Start Bootstrap})+>(hr.star-light)+>(span.skills{Web Developer - Graphic Artist - User Experience Designer}))
+		</div>
+		<div class="result" id="test">
+			<xmp>
+<header>
+	<div class="container" id="maincontent" tabindex="-1">
+		<div class="row">
+			<div class="col-lg-12">
+				<img src="img/profile.png" alt="" class="img-responsive">
+				<div class="intro-text">
+					<h1 class="name">Start Bootstrap</h1>
+					<hr class="star-light">
+					<span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
+			</xmp>
+		</div>
+	</section>
+</div>
 
 <!-- About Section -->
-section.success#about>.container>(.row>.col-lg-12.text-center>(h2{About})+>(hr.star-light))+>(.row>(.col-lg-4.col-lg-offset-2>p{Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.})+>(.col-lg-4>p{Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!})+>(.col-lg-8.col-lg-offset-2.text-center>a[href=#].btn.btn-lg.btn-outline>(i.fa.fa-download)>{Download Theme}))
+<div class="div">
+	<h2>About Section </h2>
+	<section>
+		<div class="ejemplo">
+			section.success#about>.container>(.row>.col-lg-12.text-center>(h2{About})+>(hr.star-light))+>(.row>(.col-lg-4.col-lg-offset-2>p{Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.})+>(.col-lg-4>p{Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!})+>(.col-lg-8.col-lg-offset-2.text-center>a[href=#].btn.btn-lg.btn-outline>(i.fa.fa-download)>{Download Theme}))
+		</div>
+		<div class="result" id="test">
+			<xmp>
+<section class="success" id="about">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<h2>About</h2>
+				<hr class="star-light">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-4 col-lg-offset-2">
+				<p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+			</div>
+			<div class="col-lg-4">
+				<p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+			</div>
+			<div class="col-lg-8 col-lg-offset-2 text-center"><a href="#" class="btn btn-lg btn-outline"><i class="fa fa-download"></i>Download Theme</a></div>
+		</div>
+	</div>
+</section>
+			</xmp>
+		</div>
+	</section>
+</div>
 
 <!-- Contact	 -->
-section#contact>.container>(.row>.col-lg-12.text-center>(h2{Contact Me})+>(hr.star-primary))+>(.row>.col-lg-8.col-lg-offset-2>form[name=sentMessage]#contactForm[novalidate=true]>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=name]{Name})+>(input[type=text].form-control[placeholder=Name]#name[required=true data-validation-required-message="Please enter your name."])+>(p.help-block.text-danger))+>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=email]{Email Address})+>(input[type=email].form-control[placeholder="Email Address"]#email[required=true data-validation-required-message="Please enter your email address."])+>(p.help-block.text-danger))+>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=phone]{Phone Number})+>(input[type=tel].form-control[placeholder="Phone Number"]#phone[required=true data-validation-required-message="Please enter your phone number."])+>(p.help-block.text-danger))+>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=message]{Message})+>(textarea[rows=5].form-control[placeholder=Message]#message[required=true data-validation-required-message="Please enter a message."])+>(p.help-block.text-danger))+>(br)+>(#success)+>(.row>.form-group.col-xs-12>button[type=submit].btn.btn-success.btn-lg{Send}))
+<div class="div">
+	<h2>Contact</h2>
+	<section>
+		<div class="ejemplo">
+			section#contact>.container>(.row>.col-lg-12.text-center>(h2{Contact Me})+>(hr.star-primary))+>(.row>.col-lg-8.col-lg-offset-2>form[name=sentMessage]#contactForm[novalidate=true]>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=name]{Name})+>(input[type=text].form-control[placeholder=Name]#name[required=true data-validation-required-message="Please enter your name."])+>(p.help-block.text-danger))+>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=email]{Email Address})+>(input[type=email].form-control[placeholder="Email Address"]#email[required=true data-validation-required-message="Please enter your email address."])+>(p.help-block.text-danger))+>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=phone]{Phone Number})+>(input[type=tel].form-control[placeholder="Phone Number"]#phone[required=true data-validation-required-message="Please enter your phone number."])+>(p.help-block.text-danger))+>(.row.control-group>.form-group.col-xs-12.floating-label-form-group.controls>(label[for=message]{Message})+>(textarea[rows=5].form-control[placeholder=Message]#message[required=true data-validation-required-message="Please enter a message."])+>(p.help-block.text-danger))+>(br)+>(#success)+>(.row>.form-group.col-xs-12>button[type=submit].btn.btn-success.btn-lg{Send}))
+		</div>
+		<div class="result" id="test">
+			<xmp>
+				<section id="contact">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12 text-center">
+								<h2>Contact Me</h2>
+								<hr class="star-primary">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-8 col-lg-offset-2">
+								<form action="" name="sentMessage" id="contactForm" novalidate="true">
+									<div class="row control-group">
+										<div class="form-group col-xs-12 floating-label-form-group controls">
+											<label for="name">Name</label>
+											<input type="text" class="form-control" placeholder="Name" id="name" required="true" data-validation-required-message="Please enter your name.">
+											<p class="help-block text-danger"></p>
+										</div>
+									</div>
+									<div class="row control-group">
+										<div class="form-group col-xs-12 floating-label-form-group controls">
+											<label for="email">Email Address</label>
+											<input type="email" class="form-control" placeholder="Email Address" id="email" required="true" data-validation-required-message="Please enter your email address.">
+											<p class="help-block text-danger"></p>
+										</div>
+									</div>
+									<div class="row control-group">
+										<div class="form-group col-xs-12 floating-label-form-group controls">
+											<label for="phone">Phone Number</label>
+											<input type="tel" class="form-control" placeholder="Phone Number" id="phone" required="true" data-validation-required-message="Please enter your phone number.">
+											<p class="help-block text-danger"></p>
+										</div>
+									</div>
+									<div class="row control-group">
+										<div class="form-group col-xs-12 floating-label-form-group controls">
+											<label for="message">Message</label>
+											<textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message" required="true" data-validation-required-message="Please enter a message."></textarea>
+											<p class="help-block text-danger"></p>
+										</div>
+									</div>
+									<br>
+									<div id="success"></div>
+									<div class="row">
+										<div class="form-group col-xs-12"><button type="submit" class="btn btn-success btn-lg">Send</button></div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</section>
+			</xmp>
+		</div>
+	</section>
+</div>
+
 
 <!-- Footer -->
-footer.text-center>(.footer-above>.continer>.row>(.footer-col.col-md-4>(h3{Location})+>(p{3482 Melrose Place}>br+{Beverly Hills, CA 90210}))+>(.footer-col.col-md-4>(h3{Around the Web})+>(ul.list-inline>(li>a[href=#].btn-social.btn-outline>span.sr-only{Facebook}+i.fa.fa-fw.fa-facebook)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Google Plus}+i.fa.fa-fw.fa-google-plus)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Twitter}+i.fa.fa-fw.fa-twitter)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Linked In}+i.fa.fa-fw.fa-linkedin)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Dribble}+i.fa.fa-fw.fa-dribble)))+(.footer-col.col-md-4>h3{About Freelancer}+p{Freelance is a free to use, open source Bootstrap theme create by}>a[href="http://startbootstrap.com"]{Start Bootstrap}+{.}))+(.footer-below>.container>.row>.col-lg-12{Copyright &copy; Your Website 2016})
+
+<div class="div">
+	<h2>text</h2>
+	<section>
+		<div class="ejemplo">
+			footer.text-center>(.footer-above>.continer>.row>(.footer-col.col-md-4>(h3{Location})+>(p{3482 Melrose Place}>br+{Beverly Hills, CA 90210}))+>(.footer-col.col-md-4>(h3{Around the Web})+>(ul.list-inline>(li>a[href=#].btn-social.btn-outline>span.sr-only{Facebook}+i.fa.fa-fw.fa-facebook)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Google Plus}+i.fa.fa-fw.fa-google-plus)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Twitter}+i.fa.fa-fw.fa-twitter)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Linked In}+i.fa.fa-fw.fa-linkedin)+(li>a[href=#].btn-social.btn-outline>span.sr-only{Dribble}+i.fa.fa-fw.fa-dribble)))+(.footer-col.col-md-4>h3{About Freelancer}+p{Freelance is a free to use, open source Bootstrap theme create by}>a[href="http://startbootstrap.com"]{Start Bootstrap}+{.}))+(.footer-below>.container>.row>.col-lg-12{Copyright &copy; Your Website 2016})
+		</div>
+		<div class="result" id="test">
+			<xmp>
+			<footer class="text-center">
+				<div class="footer-above">
+					<div class="continer">
+						<div class="row">
+							<div class="footer-col col-md-4">
+								<h3>Location</h3>
+								<p>3482 Melrose Place<br>Beverly Hills, CA 90210</p>
+							</div>
+							<div class="footer-col col-md-4">
+								<h3>Around the Web</h3>
+								<ul class="list-inline">
+									<li><a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a></li>
+									<li><a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a></li>
+									<li><a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a></li>
+									<li><a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a></li>
+									<li><a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribble"></i></a></li>
+								</ul>
+							</div>
+							<div class="footer-col col-md-4">
+								<h3>About Freelancer</h3>
+								<p>Freelance is a free to use, open source Bootstrap theme create by<a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer-below">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12">Copyright &copy; Your Website 2016</div>
+						</div>
+					</div>
+				</div>
+			</footer>
+			</xmp>
+		</div>
+	</section>
+</div>
+
+</body>
+<script src="js/jquery-3.2.1.min.js"></script>
+<script>
+$(document).ready(function(){
+	$('.result').hide();
+
+    $(".ejemplo").click(function(){
+        event.preventDefault();
+				/* Act on the event */
+				$(this).next('.result').slideToggle('slow');
+    });
+});
+</script>
+</html>
+
+
+
+
+
+
+
+
+
+
 
 
 
